--- a/图形学作业五/图形学作业五.vcxproj
+++ b/图形学作业五/图形学作业五.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="sphere.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="stb_image_write.h" />
+    <ClInclude Include="triangle.h" />
     <ClInclude Include="vec3.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="texture.h" />
