--- a/图形学作业五/图形学作业五.vcxproj.filters
+++ b/图形学作业五/图形学作业五.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="stb_image.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="triangle.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
