--- a/图形学作业五/图形学作业五.vcxproj
+++ b/图形学作业五/图形学作业五.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="PathTracer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="aabb.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="hitable.h" />
     <ClInclude Include="hitable_list.h" />
