--- a/图形学作业五/图形学作业五.vcxproj.filters
+++ b/图形学作业五/图形学作业五.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="aabb.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="bvh_node.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
