--- a/图形学作业五/图形学作业五.vcxproj
+++ b/图形学作业五/图形学作业五.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="vec3.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="texture.h" />
+    <ClInclude Include="bvh_node.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
